<resources>
    <string name="app_name">Calculator</string>
    <string name="Textview">Hello Sohan!\n Let\'s Calculate</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="add">Add</string>
    <string name="divide">Divide</string>
    <string name="result">Result</string>
    <string name="sub">Sub</string>
    <string name="multiply">Multiply</string>
    <string name="enter_value">Enter Value</string>
    <string name="valid">Enter a valid value</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euros</string>
    <string name="kelvin">K</string>
    <string name="fahrenheit">F</string>
    <string name="clear">Clear</string>
    <string name="convert">Rupees\nCelsius</string>
</resources>